src/sass/app.sass
/*!
 /       .                             .o8                     oooo
 /    .o8                             "888                     `888
 /  .o888oo oooo d8b oooo  oooo   .oooo888   .ooooo.   .oooo.o  888  oooo
 /    888   `888""8P `888  `888  d88' `888  d88' `88b d88(  "8  888 .8P'
 /    888    888      888   888  888   888  888ooo888 `"Y88b.   888888.
 /    888 .  888      888   888  888   888  888    .o o.  )88b  888 `88b.
 /    "888" d888b     `V88V"V8P' `Y8bod88P" `Y8bod8P' 8""888P' o888o o888o
 /  ========================================================================
 /  Author:     Chris Brame
 /  Updated:    1/20/19 4:46 PM
 /  Copyright (c) 2014-2019. All rights reserved.
 /

@import "mixins"
@import "functions"
@import "_settings"

@import url(//fonts.googleapis.com/css?family=Open+Sans:400,700,800,300,600)
@import url(//fonts.googleapis.com/css?family=Roboto:400,300,500,700)
@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700)
@import url(//fonts.googleapis.com/css?family=Ubuntu+Mono:400,700)

@import url(//fonts.googleapis.com/icon?family=Material+Icons)

*, *:before, *:after
  -webkit-box-sizing: border-box
  -moz-box-sizing: border-box
  box-sizing: border-box


::-webkit-scrollbar
  background: rgba(255,255,255,0.1)
  position: absolute
  width: 5px
  height: 5px

::-webkit-scrollbar-thumb
  //background-color: darken(#42464d, 3%)
  background-color: darken(#ddd, 25%)

::-webkit-scrollbar-track
  box-shadow: inset 0 0 4px rgba(0,0,0,0.0)

html,
body
  background: $secondary
  color: $text_color
  font-family: $fontFamily
  height: 100%
  -webkit-font-smoothing: antialiased
  scrollbar-width: thin
  overflow: hidden

.scrollable
  scrollbar-width: thin

//body
//  overflow: hidden

div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, th, td
  margin: 0

li,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,th,td
  color: $text_color

h1,h2,h3,h4,h5,h6
  font-family: $fontFamily

@-moz-document url-prefix()
  tbody
    height: 100% !important

pre
  word-wrap: normal
  padding: 16px
  overflow: auto
  font-size: 85%
  line-height: 1.45
  background-color: pre-color($page_content_right_bg)
  color: automatic-text-color(lighten($page_content_right_bg, 3%))
  +borderRadius(3px)

  br
    display: none !important

  code
    display: inline
    font: 12px Consolas, "Liberation Mono", Menlo, Courier, monospace
    color: #333333
    max-width: initial
    padding: 0
    margin: 0
    overflow: initial
    line-height: inherit
    word-wrap: normal
    background-color: transparent
    border: 0
    white-space: pre
    +borderRadius(3px)


h1,h2,h3,h4,h5,h6
  font-weight: normal
  font-style: normal
  text-rendering: optimizeLegibility
  margin-top: 0.2rem
  margin-bottom: 0.5rem

h6
  font-size: 1rem
  line-height: 1.6

a
  color: $accent_color
  text-decoration: none !important
  &:hover, &:focus, &:active
    color: darken($accent_color, 10%)

p
  font-family: $fontFamily
  font-weight: normal
  font-size: 1rem
  line-height: 1.6
  margin-bottom: 1.25rem
  text-rendering: optimizeLegibility
  color: $text_color

hr
  border: none
  height: 1px
  background: lighten($page_content_border_color, 25%)
  width: 100%

img
  display: inline-block
  vertical-align: middle

label
  font-size: 0.875rem
  color: lighten($text_color, 5%)
  cursor: pointer
  display: block
  font-weight: normal
  line-height: 1.5
  margin-bottom: 0

table
  background: white
  border: solid 1px #ddd
  table-layout: auto
  border-collapse: collapse
  border-spacing: 0

table tr th, table tr td
  padding: 0.5625rem 0.625rem
  text-align: left

table thead tr th,
table tfoot tr th,
table tfoot tr td,
table tbody tr th,
table tbody tr td,
table tr td
  display: table-cell
  line-height: 1.125rem

input[type="checkbox"]+label, input[type="radio"]+label
  margin-left: 0.5rem
  margin-right: 1rem
  margin-bottom: 0
  vertical-align: baseline

input[type="file"], input[type="checkbox"], input[type="radio"], select
  margin: 0 0 1rem 0

@import "partials/animation"
@import "partials/pace"
@import "partials/common"
@import "partials/contextmenu"
@import "partials/topnav"
@import "partials/sidebar"
@import "partials/sidebarBottomPanel"
//@import "../client/components/Nav/Sidebar/style"
//@import "../client/components/Nav/SidebarItem/style"
//@import "../client/components/Nav/Submenu/style"
@import "partials/offcanvas"
@import "partials/messages"
@import "partials/settings"
@import "partials/notifications"
@import "partials/tickets"
@import "partials/datatables"
@import "partials/servers"
@import "partials/chat"
@import "partials/dashboard"
@import "partials/donutchart"
@import "partials/barchart"
@import "partials/flottooltip"
@import "partials/calendar"
@import "partials/chosen"
@import "partials/onoffswitch"
@import "partials/mg"
@import "partials/materialize"
@import "partials/selectize"
@import "partials/trucard"
@import "partials/cardlist"
@import "partials/fab"
@import "partials/waves"
@import "partials/responsive"
@import "partials/modal"
@import "partials/loader"
@import "partials/tLoader"
@import "partials/trutab"
@import "partials/wizard"
@import "partials/typingbubble"
@import "partials/c3"
@import "partials/easymde"
@import "partials/searchbox"
@import "partials/svgcheck"
@import "partials/grapesjs"
@import "partials/searchresults"
@import "partials/truaccordian"
@import "partials/profileDrop"
//
@import "partials/ui"

// Chrome 91 Fix for table row expanding the full height
.c91-fix
  display: contents

.info-banner
  width: 100%
  height: 50px
  position: fixed
  bottom: 0
  left: 0
  z-index: 100
  background: darken($accent_blue, 10%)
  padding: 10px
  p
    width: 100%
    text-align: center
    padding-left: 50px
    font-size: 14px
    color: white
  .close
    position: absolute
    right: 10px
    top: 15px
    height: 20px
    width: 20px
    background: rgba(0,0,0,0.15)
    cursor: pointer
    +borderRadius(50%)
    &:before
      content: 'close'
      font-family: 'Material Icons'
      font-size: 12px
      color: white
      line-height: 20px
      padding: 4px

